<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21dp"
        android:text="@string/wss"
        android:textAlignment="center"
        android:textSize="40dp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="78dp"
        android:text="@string/unterach"
        android:textAlignment="center"
        android:textSize="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_above="@+id/airtemp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-232dp"
        android:text="@string/air_temp"
        android:textAlignment="center"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/airtemp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="232dp"
        android:text="@string/novalue"
        android:textAlignment="center"
        android:textSize="60dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_above="@+id/watertemp"
        android:layout_alignParentStart="true"
        android:text="@string/water_temp"
        android:textAlignment="center"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/watertemp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="87dp"
        android:text="@string/novalue"
        android:textAlignment="center"
        android:textSize="60dp" />

</RelativeLayout>