<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:text="@string/detail"
        android:textAlignment="center"
        android:textSize="25dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="383dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="0dp"
        android:paddingBottom="0dp"
        android:stretchColumns="*">


        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/watertemp3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom|right"
                android:includeFontPadding="false"
                android:lineSpacingExtra="0dp"
                android:text="@string/novalue"
                android:textSize="60dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="bottom|left"
                android:gravity="bottom|left"
                android:text="@string/d0"
                android:includeFontPadding="false"
                android:textAlignment="center"
                android:textSize="25dp" />

        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/watertemp2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="bottom|right"
                android:includeFontPadding="false"
                android:text="@string/novalue"
                android:textSize="60dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="bottom|left"
                android:gravity="bottom|left"
                android:hapticFeedbackEnabled="false"
                android:includeFontPadding="false"
                android:text="@string/d1"
                android:textAlignment="center"
                android:textSize="25dp" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/watertemp1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="bottom|right"
                android:includeFontPadding="false"
                android:text="@string/novalue"
                android:textSize="60dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="bottom|left"
                android:gravity="bottom|left"
                android:text="@string/d2"
                android:textAlignment="center"
                android:includeFontPadding="false"
                android:textSize="25dp" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/watertemp0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="bottom|right"

                android:includeFontPadding="false"
                android:text="@string/novalue"
                android:textSize="60dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="left"
                android:gravity="bottom|left"
                android:text="@string/d3"
                android:textAlignment="center"
                android:includeFontPadding="false"
                android:textSize="25dp" />
        </TableRow>
    </TableLayout>


</RelativeLayout>